--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
+asgiref==3.5.0
+backports.zoneinfo==0.2.1
 distlib==0.3.4
+dj-database-url==0.5.0
+Django==4.0.3
+django-heroku==0.3.1
 filelock==3.4.2
 pbr==5.8.0
 platformdirs==2.4.1
-six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
+psycopg2==2.9.3
+sqlparse==0.4.2
 stevedore==3.5.0
 virtualenv==20.13.0
 virtualenv-clone==0.5.7
 virtualenvwrapper==4.8.4
+whitenoise==6.0.0
