--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ distlib==0.3.4
 dj-database-url==0.5.0
 Django==4.0.3
 django-heroku==0.3.1
+django_on_heroku==2.5.6
 filelock==3.4.2
 pbr==5.8.0
 platformdirs==2.4.1
